--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.react-calendar {
+  width: 100% !important;
+  border: none !important;
+  font-family: "inter", sans-serif !important  ;
+}
+
+.react-calendar__navigation__label__labelText {
+  font-weight: 800 !important;
+}
+
+.react-calendar__tile--active {
+  background-color: #c3cbfa !important;
+  color: black !important;
+}
