--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,20 @@
   background-color: #c3cbfa !important;
   color: black !important;
 }
+
+.rbc-btn-group:first-child {
+  display: none !important;
+}
+.rbc-toolbar-label {
+  text-align: right !important;
+  padding: 0px, 20px !important;
+}
+.rbc-btn-group:last-child {
+  font-size: 13px !important;
+}
+
+.rbc-btn-group:last-child button {
+  border: none !important;
+  background-color: #f1f0ff !important;
+  margin-left: 2px !important;
+}
